Add hrefs to navbar

--- a/documentation.html
+++ b/documentation.html
@@ -13,13 +13,13 @@
         <div class="flex"><h1>AnimalDex</h1>
             <ul class="flex-list">
                 <li class="item">
-                    <a href="">Home</a>
+                    <a href="/index.html">Home</a>
                 </li>
                 <li class="item">
-                    <a href="">Features</a>
+                    <a href="/features.html">Features</a>
                 </li>
                 <li class="item">
-                    <a href="">Docs</a>
+                    <a href="documentation.html">Docs</a>
                 </li>
             </ul>
         </div>
