--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
   <nav>
     <div class="flex"><h1>AnimalDex</h1>
       <ul class="flex-list">
-        <li class="item">
-          <a href="">Home</a>
-        </li>
-        <li class="item">
-          <a href="">Features</a>
-        </li>
-        <li class="item">
-          <a href="">Docs</a>
-        </li>
+          <li class="item">
+              <a href="/index.html">Home</a>
+          </li>
+          <li class="item">
+              <a href="/features.html">Features</a>
+          </li>
+          <li class="item">
+              <a href="documentation.html">Docs</a>
+          </li>
       </ul>
     </div>
   </nav>
