--- a/features.html
+++ b/features.html
@@ -19,7 +19,7 @@
                     <a href="/features.html">Features</a>
                 </li>
                 <li class="item">
-                    <a href="documentation.html">Docs</a>
+                    <a href="/documentation.html">Docs</a>
                 </li>
             </ul>
         </div>
