--- a/features.html
+++ b/features.html
@@ -13,13 +13,13 @@
         <div class="flex"><h1>AnimalDex</h1>
             <ul class="flex-list">
                 <li class="item">
-                    <a href="/index.html">Home</a>
+                    <a href="/AnimalDex/index.html">Home</a>
                 </li>
                 <li class="item">
-                    <a href="/features.html">Features</a>
+                    <a href="/AnimalDex/features.html">Features</a>
                 </li>
                 <li class="item">
-                    <a href="/documentation.html">Docs</a>
+                    <a href="/AnimalDex/documentation.html">Docs</a>
                 </li>
             </ul>
         </div>
